# rebase-migrations

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  create_test_env.py  pyproject.toml
.claude/commands/: release.md
.github/workflows/: release.yml
python/: README.md
python/rebase_migrations/: __init__.py
src/: cli.rs  json_output.rs  lib.rs  main.rs  rebase.rs  tables.rs  utils.rs
src/migration/: change.rs  changeset.rs  file.rs  group.rs  mod.rs  parser.rs  project.rs  test_helpers.rs
