[package]
name = "rebase-migrations"
version = "0.5.0"
edition = "2024"
description = "A CLI tool to automatically renumber Django migration files during git rebases (works with django-linear-migrations)"
authors = ["Reinhard Scheuerle <reinhard.scheuerle@gmail.com>"]
license = "MIT"
repository = "https://github.com/reinhash/rebase-migrations"
homepage = "https://github.com/reinhash/rebase-migrations"
documentation = "https://github.com/reinhash/rebase-migrations#readme"
keywords = ["django", "migrations", "git", "rebase", "cli"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
clap = "4.5.32"
walkdir = "2.4.0"
regex = "1.11.1"
rustpython-parser = "0.4.0"
cli-table = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pyo3 = { version = "0.24.0", features = ["abi3-py38"], optional = true }
rayon = "1.10"

[dev-dependencies]
tempfile = "3.10.1"

[[bin]]
name = "rebase-migrations"
path = "src/main.rs"
test = false

[lib]
name = "rebase_migrations"
crate-type = ["cdylib"]
required-features = ["python-build"]

[features]
default = []
python-build = ["pyo3"]
